Implemented UI for setting up External links

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
     <uses-permission android:name="android.permission.ACCESS_ADSERVICES_AD_ID" tools:node="remove"/>
     <uses-permission android:name="android.permission.ACCESS_ADSERVICES_ATTRIBUTION" tools:node="remove"/>
@@ -139,5 +138,11 @@
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/poster__title"
             android:theme="@style/Theme.Mal.NativeDialog.WhiteBackground.DialogWhenLarge" />
+
+        <activity
+            android:name=".ui.externallinks.ExternalLinksActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="External links setup"
+            android:theme="@style/Theme.Mal" />
     </application>
 </manifest>
