--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.Mal">
 
         <activity
-            android:name=".ui.legacy.SplashActivity"
+            android:name=".ui.splash.SplashActivity"
             android:label="@string/app_name"
             android:exported="true"
             android:noHistory="true"
@@ -33,7 +33,7 @@
         </activity>
 
         <activity
-            android:name=".ui.legacy.LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Mal.LoginScreen" />
 
