--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.Mal">
 
         <activity
-            android:name=".ui.splash.SplashActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:noHistory="true"
             android:theme="@style/Theme.Mal.LoginScreen">
@@ -30,10 +30,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:theme="@style/Theme.Mal.LoginScreen" />
 
         <activity
             android:name=".ui.legacy.ListActivity"
@@ -63,18 +59,6 @@
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="Recommendations"
             android:theme="@style/Theme.Mal" />
-
-        <activity
-            android:name=".ui.userprofile.UserProfileActivity"
-            android:label="User Profile"
-            android:theme="@style/Theme.Mal" />
-
-        <activity
-            android:name=".ui.search.SearchActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="Search"
-            android:theme="@style/Theme.Mal"
-            android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
 
         <activity
             android:name=".ui.ranked.RankedActivity"
