--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:name=".PocketMALApplication"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backupscheme"
+        android:dataExtractionRules="@xml/backupscheme"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
@@ -43,46 +44,16 @@
             android:theme="@style/Theme.Mal" />
 
         <activity
-            android:name=".ui.ranked.RankedActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="Top"
-            android:theme="@style/Theme.Mal" />
-
-        <activity
-            android:name=".ui.browse.BrowseActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="Browse"
-            android:theme="@style/Theme.Mal" />
-
-        <activity
             android:name=".ui.editdetails.EditDetailsActivity"
             android:label="Edit Details"
             android:theme="@style/Theme.Mal.NativeDialog.WhiteBackground.DialogWhenLarge" />
-
-        <activity
-            android:name=".ui.about.AboutActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="About"
-            android:theme="@style/Theme.Mal.NativeDialog.WhiteBackground.DialogWhenLarge" />
-
-        <activity
-            android:name=".ui.settings.SettingsActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/settings__settings"
-            android:theme="@style/Theme.Mal.NativeDialog.WhiteBackground" />
-
+        
         <activity
             android:name=".ui.sharingpatterns.SharingPatternsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="Sharing Text Patterns"
             android:theme="@style/Theme.Mal.NativeDialog.WhiteBackground"
             android:windowSoftInputMode="stateHidden" />
-
-        <activity
-            android:name=".ui.seasonal.SeasonalActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/seasonal__title"
-            android:theme="@style/Theme.Mal" />
 
         <activity
             android:name=".ui.poster.PosterActivity"
